unpackaged/main/default/objects/Account/fields/Fecha_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_creacion__c</fullName>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>