unpackaged/main/default/objects/Account/fields/Fecha_de_Afluencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Afluencia__c</fullName>
    <label>Fecha de Afluencia</label>
    <type>Date</type>
</CustomField>