unpackaged/main/default/objects/Account/fields/Fecha_de_Captura_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Captura_Formula__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Captura</label>
    <type>Date</type>
</CustomField>