unpackaged/main/default/objects/Account/fields/Fecha_de_Habitabilidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Habitabilidad__c</fullName>
    <formula>Vivienda_Mas_Reciente__r.FechadeHabitabilidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Habitabilidad</label>
    <type>Date</type>
</CustomField>