unpackaged/main/default/objects/Account/fields/Fecha_de_Prospeccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Prospeccion__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Fecha de Prospección 2</label>
    <type>Date</type>
</CustomField>