unpackaged/main/default/objects/Account/fields/Fecha_Estatus_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estatus_Asesor__c</fullName>
    <label>Fecha Estatus Asesor</label>
    <type>DateTime</type>
</CustomField>