unpackaged/main/default/objects/Account/fields/Fecha_Estatus_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estatus_Colaborador_Javer__c</fullName>
    <label>Fecha Estatus Colaborador Javer</label>
    <type>DateTime</type>
</CustomField>