unpackaged/main/default/objects/Account/fields/Fecha_Estatus_LP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estatus_LP__c</fullName>
    <label>Fecha Estatus LP</label>
    <type>DateTime</type>
</CustomField>