unpackaged/main/default/objects/Account/fields/Fecha_Estatus_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estatus_Prospectador__c</fullName>
    <label>Fecha Estatus Prospectador</label>
    <type>DateTime</type>
</CustomField>