unpackaged/main/default/objects/Account/fields/Fecha_Hora_Asignacion_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Asignacion_Asesor__c</fullName>
    <label>Fecha Hora Asignación Asesor</label>
    <type>DateTime</type>
</CustomField>