unpackaged/main/default/objects/Account/fields/Fecha_Hora_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Colaborador_Javer__c</fullName>
    <label>Fecha Hora Colaborador Javer</label>
    <type>DateTime</type>
</CustomField>