unpackaged/main/default/objects/Account/fields/Fecha_Hora_LP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_LP__c</fullName>
    <label>Fecha Hora LP</label>
    <type>DateTime</type>
</CustomField>