unpackaged/main/default/objects/Account/fields/Fecha_Hora_Prospeccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Prospeccion__c</fullName>
    <label>Fecha Hora de Prospección</label>
    <type>DateTime</type>
</CustomField>