unpackaged/main/default/objects/Account/fields/Fecha_ltima_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ltima_visita__c</fullName>
    <label>Fecha última visita</label>
    <type>Date</type>
</CustomField>