unpackaged/main/default/objects/Account/fields/Fecha_Nacimiento_Texto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Nacimiento_Texto__c</fullName>
    <label>Fecha Nacimiento Texto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>