unpackaged/main/default/objects/Account/fields/Fecha_Notificacion_Vencimiento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Notificacion_Vencimiento_Asesor__c</fullName>
    <formula>(Fecha_Hora_Asignacion_Asesor__c) - (1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Notificación Vencimiento Asesor</label>
    <type>DateTime</type>
</CustomField>