unpackaged/main/default/objects/Account/fields/Fecha_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Propuesta__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Propuesta</label>
    <type>Date</type>
</CustomField>