unpackaged/main/default/objects/Account/fields/Fecha_Prospeccion_vs_Today__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Prospeccion_vs_Today__c</fullName>
    <formula>TODAY() - FechaProspeccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Prospeccion vs Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>