unpackaged/main/default/objects/Account/fields/Fecha_Reactivacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reactivacion__c</fullName>
    <label>Fecha de Reactivación de la Cuenta</label>
    <type>Date</type>
</CustomField>