unpackaged/main/default/objects/Account/fields/Fecha_Vencimiento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Asesor__c</fullName>
    <formula>IF(
 Extension_Vencimiento_Asesor__c = true, 
 Fecha_Asignacion_Asesor__c + $CustomMetadata.Vencimiento_Asignacion__mdt.Asesor.Dias__c + 15,
 Fecha_Asignacion_Asesor__c + $CustomMetadata.Vencimiento_Asignacion__mdt.Asesor.Dias__c
)</formula>
    <label>Fecha Vencimiento Asesor</label>
    <type>Date</type>
</CustomField>