unpackaged/main/default/objects/Account/fields/Fecha_Vencimiento_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Colaborador_Javer__c</fullName>
    <formula>IF(Colaborador_Javer_Asignacion_Prorroga__c = true,
 Fecha_Colaborador_Javer__c + $CustomMetadata.Vencimiento_Asignacion__mdt.Colaborador_Javer_Prorroga.Dias__c,
 Fecha_Colaborador_Javer__c + $CustomMetadata.Vencimiento_Asignacion__mdt.Colaborador_Javer.Dias__c
)</formula>
    <label>Fecha Vencimiento Colaborador Javer</label>
    <type>Date</type>
</CustomField>