unpackaged/main/default/objects/Account/fields/Fecha_Vencimiento_LP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_LP__c</fullName>
    <formula>Fecha_LP__c + $CustomMetadata.Vencimiento_Asignacion__mdt.Lead_Profiler.Dias__c</formula>
    <label>Fecha Vencimiento LP</label>
    <type>Date</type>
</CustomField>