unpackaged/main/default/objects/Account/fields/Fecha_Vencimiento_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Prospectador__c</fullName>
    <formula>Fecha_Prospeccion__c  + $CustomMetadata.Vencimiento_Asignacion__mdt.Prospectador.Dias__c</formula>
    <label>Fecha Vencimiento Prospectador</label>
    <type>Date</type>
</CustomField>