unpackaged/main/default/objects/Account/fields/FechaAsignacion__c.field-meta.xml
<CustomField>
    <fullName>FechaAsignacion__c</fullName>
    <label>Fecha de asignación</label>
    <type>Date</type>
</CustomField>