unpackaged/main/default/objects/Account/fields/FechaDuplicada__c.field-meta.xml
<CustomField>
    <fullName>FechaDuplicada__c</fullName>
    <label>FechaDuplicada</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>