unpackaged/main/default/objects/Account/fields/FechaEscrituracion__c.field-meta.xml
<CustomField>
    <fullName>FechaEscrituracion__c</fullName>
    <label>Fecha de Escrituración</label>
    <type>Date</type>
</CustomField>