unpackaged/main/default/objects/Account/fields/FechaFormalizacion__c.field-meta.xml
<CustomField>
    <fullName>FechaFormalizacion__c</fullName>
    <label>Fecha de Formalización</label>
    <type>Date</type>
</CustomField>