unpackaged/main/default/objects/Account/fields/FechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaNacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>