unpackaged/main/default/objects/Account/fields/FechaNacimiento_Formula__c.field-meta.xml
<CustomField>
    <fullName>FechaNacimiento_Formula__c</fullName>
    <formula>IF( ISBLANK(FechaNacimiento__c ) , NULL , IF( LEN(TEXT(DAY(FechaNacimiento__c ))) &gt; 1 , TEXT(DAY(FechaNacimiento__c )), &quot;0&quot; + TEXT(DAY(FechaNacimiento__c ))) + &quot;/&quot; + IF(LEN(TEXT(MONTH(FechaNacimiento__c ))) &gt; 1 , TEXT(MONTH(FechaNacimiento__c )), &quot;0&quot; + TEXT(MONTH(FechaNacimiento__c ))) + &quot;/&quot; + TEXT(YEAR(FechaNacimiento__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FechaNacimiento Formula</label>
    <type>Text</type>
</CustomField>