unpackaged/main/default/objects/Account/fields/FechaProspeccion__c.field-meta.xml
<CustomField>
    <fullName>FechaProspeccion__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Fecha que se registra</description>
    <label>Fecha de Prospección 1</label>
    <type>Date</type>
</CustomField>