unpackaged/main/default/objects/Account/fields/Fechest_cta__c.field-meta.xml
<CustomField>
    <fullName>Fechest_cta__c</fullName>
    <label>Fecha estimada</label>
    <type>Date</type>
</CustomField>