unpackaged/main/default/objects/Account/fields/Fechprec_cta__c.field-meta.xml
<CustomField>
    <fullName>Fechprec_cta__c</fullName>
    <label>Fecha precalificación</label>
    <type>Date</type>
</CustomField>