unpackaged/main/default/objects/Account/fields/Financiera__c.field-meta.xml
<CustomField>
    <fullName>Financiera__c</fullName>
    <label>Financiera</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Credito__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Financiera</valueSetName>
    </valueSet>
</CustomField>