unpackaged/main/default/objects/Account/fields/Geolocalizacion__c.field-meta.xml
<CustomField>
    <fullName>Geolocalizacion__c</fullName>
    <label>Geolocalizacion</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>