unpackaged/main/default/objects/Account/fields/Gerente_de_Ventas_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Gerente_de_Ventas_Id_Formula__c</fullName>
    <formula>Asesor__r.Gerente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente de Ventas Id</label>
    <type>Text</type>
</CustomField>