unpackaged/main/default/objects/Account/fields/Gerente_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Ventas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente de Ventas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas6</relationshipName>
    <type>Lookup</type>
</CustomField>