unpackaged/main/default/objects/Account/fields/Homoclave_Texto__c.field-meta.xml
<CustomField>
    <fullName>Homoclave_Texto__c</fullName>
    <label>Homoclave</label>
    <length>3</length>
    <type>Text</type>
</CustomField>