unpackaged/main/default/objects/Account/fields/Id_Ase__c.field-meta.xml
<CustomField>
    <fullName>Id_Ase__c</fullName>
    <label>Id_Ase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>