unpackaged/main/default/objects/Account/fields/ID_CLIENTE_AR__c.field-meta.xml
<CustomField>
    <fullName>ID_CLIENTE_AR__c</fullName>
    <externalId>true</externalId>
    <label>ID_CLIENTE_AR</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>