unpackaged/main/default/objects/Account/fields/Id_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Id_Colaborador_Javer__c</fullName>
    <label>Id Colaborador Javer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>