unpackaged/main/default/objects/Account/fields/ID_owner__c.field-meta.xml
<CustomField>
    <fullName>ID_owner__c</fullName>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID owner</label>
    <type>Text</type>
</CustomField>