unpackaged/main/default/objects/Account/fields/Id_Pro__c.field-meta.xml
<CustomField>
    <fullName>Id_Pro__c</fullName>
    <label>Id_Pro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>