unpackaged/main/default/objects/Account/fields/ID_PROCESO_AR__c.field-meta.xml
<CustomField>
    <fullName>ID_PROCESO_AR__c</fullName>
    <label>ID_PROCESO_AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>