unpackaged/main/default/objects/Account/fields/IdMasComercial__c.field-meta.xml
<CustomField>
    <fullName>IdMasComercial__c</fullName>
    <label>IdMasComercial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>