unpackaged/main/default/objects/Account/fields/Ingresos_Mensuales__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Mensuales__c</fullName>
    <label>Ingresos Mensuales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ingresos_Mensuales</valueSetName>
    </valueSet>
</CustomField>