unpackaged/main/default/objects/Account/fields/Integracion_realizada__c.field-meta.xml
<CustomField>
    <fullName>Integracion_realizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integración Realizada</label>
    <type>Checkbox</type>
</CustomField>