unpackaged/main/default/objects/Account/fields/Ir_a_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Ir_a_la_Cuenta__c</fullName>
    <formula>HYPERLINK(Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ir a la Cuenta</label>
    <type>Text</type>
</CustomField>