unpackaged/main/default/objects/Account/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is New?</label>
    <type>Checkbox</type>
</CustomField>