unpackaged/main/default/objects/Account/fields/isATC__c.field-meta.xml
<CustomField>
    <fullName>isATC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isATC</label>
    <type>Checkbox</type>
</CustomField>