unpackaged/main/default/objects/Account/fields/IsTRBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsTRBypassed__c</fullName>
    <formula>$User.is_Data_Migration_User__c ||
BLANKVALUE(Trigger_Override__c, $System.OriginDateTime) &gt; NOW() - 0.000173611 /* 15 Seconds */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTRBypassed</label>
    <type>Checkbox</type>
</CustomField>