unpackaged/main/default/objects/Account/fields/Jefe_Formalizacion__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Formalizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe de Formalización</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas5</relationshipName>
    <type>Lookup</type>
</CustomField>