unpackaged/main/default/objects/Account/fields/JMC_AsesorAsignado__c.field-meta.xml
<CustomField>
    <fullName>JMC_AsesorAsignado__c</fullName>
    <label>Asesor Asignado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>