unpackaged/main/default/objects/Account/fields/JMC_Carga_inicial__c.field-meta.xml
<CustomField>
    <fullName>JMC_Carga_inicial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar las cuentas de la carga inicial</description>
    <label>Carga inicial</label>
    <type>Checkbox</type>
</CustomField>