unpackaged/main/default/objects/Account/fields/JMC_Estatus_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>JMC_Estatus_Cuenta__c</fullName>
    <label>Estatus Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Por asignar</fullName>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>Por reasginar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>