unpackaged/main/default/objects/Account/fields/JMC_Estatus_Proceso__c.field-meta.xml
<CustomField>
    <fullName>JMC_Estatus_Proceso__c</fullName>
    <label>Estatus Proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Escriturado</fullName>
            </value>
            <value>
                <fullName>Formalizado</fullName>
            </value>
            <value>
                <fullName>Liberada</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Liberación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>