unpackaged/main/default/objects/Account/fields/JMC_EstatusLead__c.field-meta.xml
<CustomField>
    <fullName>JMC_EstatusLead__c</fullName>
    <label>Estatus Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No validado</fullName>
            </value>
            <value>
                <fullName>No Interesado</fullName>
            </value>
            <value>
                <fullName>Incubadora</fullName>
            </value>
            <value>
                <fullName>Ilocalizable</fullName>
            </value>
            <value>
                <fullName>Perfilado</fullName>
                <default>true</default>
                <label>Perfilado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>