unpackaged/main/default/objects/Account/fields/JMC_Fecha_Afluencia__c.field-meta.xml
<CustomField>
    <fullName>JMC_Fecha_Afluencia__c</fullName>
    <label>Fecha Afluencia</label>
    <type>Date</type>
</CustomField>