unpackaged/main/default/objects/Account/fields/JMC_Fecha_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>JMC_Fecha_Cancelacion__c</fullName>
    <label>Fecha Cancelacion</label>
    <type>Date</type>
</CustomField>