unpackaged/main/default/objects/Account/fields/JMC_Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>JMC_Fecha_Entrega__c</fullName>
    <label>Fecha Entrega</label>
    <type>Date</type>
</CustomField>