unpackaged/main/default/objects/Account/fields/JMC_Lote__c.field-meta.xml
<CustomField>
    <fullName>JMC_Lote__c</fullName>
    <label>Lote</label>
    <length>225</length>
    <type>Text</type>
</CustomField>