unpackaged/main/default/objects/Account/fields/JMC_Manzana__c.field-meta.xml
<CustomField>
    <fullName>JMC_Manzana__c</fullName>
    <label>Manzana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>