unpackaged/main/default/objects/Account/fields/JMC_TipoCargaInicial__c.field-meta.xml
<CustomField>
    <fullName>JMC_TipoCargaInicial__c</fullName>
    <label>Tipo Carga Inicial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>