unpackaged/main/default/objects/Account/fields/JMC_Unidad_Privativa__c.field-meta.xml
<CustomField>
    <fullName>JMC_Unidad_Privativa__c</fullName>
    <label>Unidad Privativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>