unpackaged/main/default/objects/Account/fields/Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profiler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Profiler</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Lead</value>
        </filterItems>
        <filterItems>
            <field>User.FraccionamientoAutorizados__c</field>
            <operation>contains</operation>
            <valueField>$Source.Nombre_Fraccionamiento__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Generico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas4</relationshipName>
    <type>Lookup</type>
</CustomField>