unpackaged/main/default/objects/Account/fields/Lead_Profiler_Primera_Parte_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profiler_Primera_Parte_Formula__c</fullName>
    <formula>( ( NOW() - Fecha_Hora_LP__c ) * 24 * 60 * 60 ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Profiler Primera Parte Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>