unpackaged/main/default/objects/Account/fields/Lead_Profiler_Segunda_Parte_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profiler_Segunda_Parte_Formula__c</fullName>
    <formula>$CustomMetadata.Vencimiento_Asignacion__mdt.Lead_Profiler.Dias__c * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Profiler Segunda Parte Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>