unpackaged/main/default/objects/Account/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <formula>Lead_Profiler__r.FirstName + &quot; &quot;  +  Lead_Profiler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leader</label>
    <type>Text</type>
</CustomField>