unpackaged/main/default/objects/Account/fields/Logo_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Logo_Fraccionamiento__c</fullName>
    <formula>IMAGE(&quot;/resource/Logo_&quot;&amp; SUBSTITUTE(Fraccionamiento_cta__r.Name,&quot; &quot;,&quot;&quot;), SUBSTITUTE(Fraccionamiento_cta__r.Name,&quot; &quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Fraccionamiento</label>
    <type>Text</type>
</CustomField>