unpackaged/main/default/objects/Account/fields/Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_Nacimiento__c</fullName>
    <label>Lugar de Nacimiento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nacionalidad__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lugar_Nacimiento</valueSetName>
    </valueSet>
</CustomField>