unpackaged/main/default/objects/Account/fields/Medio_de_contacto_Preferido__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_contacto_Preferido__c</fullName>
    <label>Medio de contacto Preferido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Correo</fullName>
            </value>
            <value>
                <fullName>Red Social</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>