unpackaged/main/default/objects/Account/fields/MENSAJE_API__c.field-meta.xml
<CustomField>
    <fullName>MENSAJE_API__c</fullName>
    <label>MENSAJE_API</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>