unpackaged/main/default/objects/Account/fields/Monaho_cta__c.field-meta.xml
<CustomField>
    <fullName>Monaho_cta__c</fullName>
    <label>Monto ahorro voluntario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>