unpackaged/main/default/objects/Account/fields/Montgast_cta__c.field-meta.xml
<CustomField>
    <fullName>Montgast_cta__c</fullName>
    <label>Monto gasto por titulación y operación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>