unpackaged/main/default/objects/Account/fields/Motivo_Baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Baja__c</fullName>
    <label>Motivo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Baja__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Motivo_Baja</valueSetName>
    </valueSet>
</CustomField>