unpackaged/main/default/objects/Account/fields/Motivo_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Compra__c</fullName>
    <label>Motivo de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atributos Fraccionamiento</fullName>
            </value>
            <value>
                <fullName>Cambio de ciudad</fullName>
            </value>
            <value>
                <fullName>Inversión</fullName>
            </value>
            <value>
                <fullName>Matrimonio</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Paga Renta</fullName>
            </value>
            <value>
                <fullName>Precios</fullName>
            </value>
            <value>
                <fullName>Promoción</fullName>
            </value>
            <value>
                <fullName>Recomendación</fullName>
            </value>
            <value>
                <fullName>Vivienda Propia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>