unpackaged/main/default/objects/Account/fields/Motivo_Incubacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Incubacion__c</fullName>
    <label>Motivo de Incubación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motivo_Incubacion</valueSetName>
    </valueSet>
</CustomField>