unpackaged/main/default/objects/Account/fields/Motivo_Reactivacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Reactivacion__c</fullName>
    <label>Motivo Reactivación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motivo_Reactivacion</valueSetName>
    </valueSet>
</CustomField>