unpackaged/main/default/objects/Account/fields/Municipio_cta__c.field-meta.xml
<CustomField>
    <fullName>Municipio_cta__c</fullName>
    <label>Municipio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Anáhuac</fullName>
            </value>
            <value>
                <fullName>Apodaca</fullName>
            </value>
            <value>
                <fullName>Benito Juárez</fullName>
            </value>
            <value>
                <fullName>Coacalco</fullName>
            </value>
            <value>
                <fullName>Cumbres</fullName>
            </value>
            <value>
                <fullName>El Marques</fullName>
            </value>
            <value>
                <fullName>El Salto</fullName>
            </value>
            <value>
                <fullName>García</fullName>
            </value>
            <value>
                <fullName>General Escobedo</fullName>
            </value>
            <value>
                <fullName>Juárez</fullName>
            </value>
            <value>
                <fullName>Lerma de Villada</fullName>
            </value>
            <value>
                <fullName>Querétaro</fullName>
            </value>
            <value>
                <fullName>Reynosa</fullName>
            </value>
            <value>
                <fullName>San Juan del Río</fullName>
            </value>
            <value>
                <fullName>San Nicolas</fullName>
            </value>
            <value>
                <fullName>Santa Catarina</fullName>
            </value>
            <value>
                <fullName>Tecamac</fullName>
            </value>
            <value>
                <fullName>Tlajomulco de Zuñiga</fullName>
            </value>
            <value>
                <fullName>Tonalá</fullName>
            </value>
            <value>
                <fullName>Zumpango</fullName>
            </value>
            <value>
                <fullName>NU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>