unpackaged/main/default/objects/Account/fields/Municipiocta__c.field-meta.xml
<CustomField>
    <fullName>Municipiocta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Municipio__c.Estado__c</field>
            <operation>equals</operation>
            <valueField>$Source.Estado_cta__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>