unpackaged/main/default/objects/Account/fields/No_Cliente__c.field-meta.xml
<CustomField>
    <fullName>No_Cliente__c</fullName>
    <displayFormat>2-{0000000000}</displayFormat>
    <label>No. Cliente</label>
    <type>AutoNumber</type>
</CustomField>