unpackaged/main/default/objects/Account/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <formula>IF(
 OR(
  RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;,
  RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;,
  RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;),
 FirstName + &#39; &#39; + LastName + &#39; &#39; + Apellidomaterno_cta__c,
 Name + &#39; &#39; +  Apellidopaterno_cta__c + &#39; &#39; + Apellidomaterno_cta__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo</label>
    <type>Text</type>
</CustomField>