unpackaged/main/default/objects/Account/fields/Nombre_Ase__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Ase__c</fullName>
    <label>Nombre_Ase</label>
    <length>80</length>
    <type>Text</type>
</CustomField>