unpackaged/main/default/objects/Account/fields/Nombre_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Colaborador_Javer__c</fullName>
    <label>Nombre Colaborador Javer</label>
    <length>60</length>
    <type>Text</type>
</CustomField>